--- a/react_portfolio_v1/public/styles.css
+++ b/react_portfolio_v1/public/styles.css
@@ -18,7 +18,7 @@ footer {
   }
   
   .quicktrends-icon {
-    height: 250px;
-    width: 250px;
+    max-width: 35% !important;
+    min-height: 250px;
   }
   
